# microservices_project

./: .gitignore  README.md
.github/workflows/: docker-image.yml
components/: docker-compose.yml
components/book_service/: book_service.http
components/book_service/book_backend/: Dockerfile  entry_point.sh  run_handle.py  setup.cfg
components/book_service/book_backend/book/adapters/book_api/: app.py  controllers.py
components/book_service/book_backend/book/adapters/database/: __init__.py  mapping.py  repositories.py  settings.py  tables.py
components/book_service/book_backend/book/adapters/message_bus/: scheme.py  settings.py
components/book_service/book_backend/book/application/: dataclasses.py  errors.py  interfaces.py  services.py
components/book_service/book_backend/book/composites/: book_api.py
components/book_service/book_backend/tests/unit/: conftest.py  test_service.py
components/issue_service/: issue_service.http
components/issue_service/issue_backend/: Dockerfile  entry_point.sh  run_handle.py  setup.cfg
components/issue_service/issue_backend/issue/application/: dataclasses.py  errors.py  interfaces.py  services.py
components/issue_service/issue_backend/issue/composites/: issue_api.py
components/issue_service/issue_backend/tests/unit/: conftest.py  test_service.py
components/nginx/: nginx.conf
components/postgresql/: Dockerfile  init.sql
components/user_service/: user_service.http
components/user_service/user_backend/: Dockerfile  entry_point.sh  run_handle.py  setup.cfg
components/user_service/user_backend/user/: __init__.py
(+23 files in other folders)
