[metadata]
name = book-service
version = 1.0.0
description = Micro-service for handle books
author = Igor Sm

[options]
packages = find_namespace:
python_requires = ~=3.7.0

install_requires =
    psycopg2-binary~=2.9.3
    attrs~=21.2.0
    PyJWT~=2.0.0
    pydantic~=1.8.2
    sqlalchemy~=1.4.23
    alembic~=1.7.0
    gunicorn~=20.0.0
    click~=7.1.0
    python-json-logger~=2.0.0
    classic-components
    classic-aspects
    classic-app-layer
    classic-http-api
    classic-http-auth
    classic-sql-storage
    classic-messaging
    classic-messaging-kombu

[options.extras_require]
dev =
    pytest~=6.2.5
    pytest-cov~=2.12.1
    isort~=5.10.0
    yapf~=0.32.0